src/test/ui/error-codes/E0106.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/E0106.rs:2:8
   |
LL |     x: &bool,
   |        ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL | struct Foo<'lifetime> {
LL |     x: &'lifetime bool,
   |

error[E0106]: missing lifetime specifier
  --> $DIR/E0106.rs:7:7
   |
LL |     B(&bool),
   |       ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL | enum Bar<'lifetime> {
LL |     A(u8),
LL |     B(&'lifetime bool),
   |

error[E0106]: missing lifetime specifier
  --> $DIR/E0106.rs:10:14
   |
LL | type MyStr = &str;
   |              ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL | type MyStr<'lifetime> = &'lifetime str;
   |           ^^^^^^^^^^^   ^^^^^^^^^^

error[E0106]: missing lifetime specifier
  --> $DIR/E0106.rs:17:10
   |
LL |     baz: Baz,
   |          ^^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL | struct Quux<'lifetime> {
LL |     baz: Baz<'lifetime>,
   |

error[E0106]: missing lifetime specifiers
  --> $DIR/E0106.rs:20:11
   |
LL |     buzz: Buzz,
   |           ^^^^ expected 2 lifetime parameters

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0106`.
